Don't reuse forks for surefire plugin